fix: DateInput word wrap layout

--- a/src/DateInput.scss
+++ b/src/DateInput.scss
@@ -5,7 +5,7 @@
 .skel-DateInput_launcher {
   display: inline-grid;
   vertical-align: top;
-  grid-template-columns: minmax(0, 1fr) auto;
+  grid-template-columns: 1fr auto;
   align-items: center;
   text-align: start;
 
@@ -13,7 +13,7 @@
   border: 1px solid var(--skel-input-border-color);
   padding: 0;
   box-sizing: border-box;
-  height: var(--skel-one-line-input-height);
+  min-height: var(--skel-one-line-input-height);
 
   background-color: var(--skel-background-color);
   color: inherit;
